# JEPA-SVI

./: .gitignore  README.md  pyproject.toml
src/jepa_iv/: __init__.py  baselines.py  black_scholes.py  cli.py  config.py  data.py  dynamics.py  experiments.py  hedging.py  masking.py  metrics.py  models.py  surface.py  svi.py  training.py
src/jepa_iv_surface.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_black_scholes.py  test_data.py  test_models.py  test_surface.py  test_svi_hedging.py  test_vendor_schema.py
