[project]
name = "jepa-iv-surface"
version = "0.1.0"
description = "Production-grade JEPA pipeline for implied volatility surface forecasting research."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arch>=8.0.0",
    "h5py>=3.10",
    "joblib>=1.4",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "statsmodels>=0.14",
    "torch>=2.3",
    "tqdm>=4.66",
    "umap-learn>=0.5",
]

[project.optional-dependencies]
data = ["yfinance>=0.2.40"]
dev = ["pytest>=8.0", "ruff>=0.8"]

[project.scripts]
jepa-iv = "jepa_iv.cli:main"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
